NoteActivity created, add & update note features completed
closes #3

NoteActivity created

actionBar UpButton implemented

listener for Up Button

save and update notes feature created

drawable to make an personalized cursor created

EditText 'title' singleline with scrolling horizontaly 'false'

improvements on NoteActivity layout

listener for editing the note created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoList">
         <activity
+            android:name=".NoteActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
